--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>HW_JS_08_11_22</title>
+	<title>HW_JS_08_22</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.w-4-rem{
+			width: 4rem;
+		}
+	</style>
 </head>
 
 <body class="bg-dark">
